<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2018 The Asus-SDM660 Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="audio"
        android:title="@string/audio_enhancer_title">

        <com.asus.zenparts.preferences.SecureSettingSwitchPreference
            android:defaultValue="false"
            android:key="dirac_enabled"
            android:summary="@string/dirac_summary"
            android:icon="@drawable/ic_dirac"
            android:title="@string/dirac_title" />

        <com.asus.zenparts.preferences.SecureSettingListPreference
            android:defaultValue="0"
            android:dependency="dirac_enabled"
            android:entries="@array/dirac_headset_pref_entries"
            android:entryValues="@array/dirac_headset_pref_values"
            android:key="dirac_headset_pref"
            android:summary="%s"
            android:icon="@drawable/ic_headphone"
            android:title="@string/dirac_headset_title" />

        <com.asus.zenparts.preferences.SecureSettingListPreference
            android:defaultValue="0,0,0,0,0,0,0"
            android:dependency="dirac_enabled"
            android:entries="@array/dirac_preset_pref_entries"
            android:entryValues="@array/dirac_preset_pref_values"
            android:key="dirac_preset_pref"
            android:summary="%s"
            android:icon="@drawable/ic_preset"
            android:title="@string/dirac_preset_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/audio_gain_title">

        <com.asus.zenparts.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="0"
            android:key="earpiece_gain"
            android:max="20"
            app:min="-10"
            android:icon="@drawable/ic_earpiece"
            android:title="@string/earpiece_gain" />

        <com.asus.zenparts.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="2"
            android:key="headphone_gain"
            android:max="20"
            app:min="-40"
            android:icon="@drawable/ic_headphone"
            android:title="@string/headphone_gain" />

        <com.asus.zenparts.preferences.CustomSeekBarPreference
            android:defaultValue="0"
            android:key="microphone_gain"
            android:max="20"
            app:min="-10"
            android:icon="@drawable/ic_mic"
            android:title="@string/microphone_gain" />

        <com.asus.zenparts.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="0"
            android:key="speaker_gain"
            android:max="20"
            app:min="-10"
            android:icon="@drawable/ic_speaker"
            android:title="@string/speaker_gain" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="boost"
        android:title="@string/boost_title" >

        <com.asus.zenparts.preferences.SecureSettingSwitchPreference
            android:key="touchboost"
            android:defaultValue="false"
            android:title="@string/touchboost_title"
            android:icon="@drawable/ic_boost"
            android:summary="@string/touchboost_summary" />

        <com.asus.zenparts.preferences.SecureSettingListPreference
            android:key="gpuboost"
            android:dialogTitle="@string/gpuboost_dialogTitle"
            android:entries="@array/gpuboost_profiles"
            android:entryValues="@array/gpuboost_values"
            android:icon="@drawable/ic_gpuboost"
            android:defaultValue="0"
            android:title="@string/gpuboost_title" />

        <com.asus.zenparts.preferences.SecureSettingListPreference
            android:key="cpuboost"
            android:dialogTitle="@string/cpuboost_dialogTitle"
            android:entries="@array/cpuboost_profiles"
            android:entryValues="@array/cpuboost_values"
            android:icon="@drawable/ic_cpuboost"
            android:defaultValue="0"
            android:title="@string/cpuboost_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="charging"
        android:title="@string/smart_charging_main_title">

        <SwitchPreference
            android:key="smart_charging"
            android:icon="@drawable/ic_charging_main"
            android:summary="@string/smart_charging_summary"
            android:title="@string/smart_charging_title" />

        <com.asus.zenparts.preferences.SeekBarPreference
            android:key="seek_bar"
            android:title="Select charging limit"
            android:layout="@layout/preference_slider"
            android:defaultValue="95"
            android:max="100"
            android:min="60"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"/>

        <SwitchPreference
            android:key="reset_stats"
            android:icon="@drawable/ic_info_outline_24dp"
            android:title="@string/reset_stats_title"
            android:summary="@string/reset_stats_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="display"
        android:title="@string/display_title">

        <Preference
            android:key="device_kcal"
            android:persistent="false"
            android:icon="@drawable/ic_kcal"
            android:title="@string/device_kcal_title"
            android:summary="@string/kcal_enabled_summary">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.asus.zenparts.kcal.KCalSettingsActivity"
                android:targetPackage="com.asus.zenparts.kcal" />
        </Preference>

        <SwitchPreference
            android:key="fps_info"
            android:icon="@drawable/ic_fps_info"
            android:title="@string/fps_info_title"
            android:summary="@string/fps_info_summary"
            android:persistent="true" />

        <com.asus.zenparts.preferences.SecureSettingSwitchPreference
            android:defaultValue="false"
            android:key="backlight_dimmer"
            android:icon="@drawable/ic_backlight"
            android:title="@string/backlight_dimmer"
            android:summary="@string/backlight_summary" />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/gestures">

        <PreferenceScreen
            android:key="ambient_display_gestures"
            android:fragment="com.asus.zenparts.ambient.AmbientGesturePreferenceActivity"
            android:summary="@string/ambient_display_gestures_summary"
            android:icon="@drawable/ic_doze"
            android:title="@string/ambient_display_gestures_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="notification_led"
        android:title="@string/notification_title">

        <com.asus.zenparts.preferences.NotificationLedSeekBarPreference
            android:key="notification_led_brightness"
            android:title="@string/notification_led_title"
            android:icon="@drawable/ic_led"
            android:max="100"
            app:min="1"
            app:units="%"
            android:defaultValue="100" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="selinux"
        android:title="@string/selinux_category">

    <Preference
        android:summary="@string/selinux_explanation_summary"
        android:selectable="false"/>

    <SwitchPreference
        android:key="selinux_mode"
        android:title="@string/selinux_mode_title"
        android:summaryOn="@string/selinux_enforcing_summary"
        android:summaryOff="@string/selinux_permissive_summary"
        android:icon="@drawable/ic_linux" />

    <SwitchPreference
        android:key="selinux_persistence"
        android:title="@string/selinux_persistence_title"
        android:summary="@string/selinux_persistence_summary"
        android:defaultValue="true"
        android:icon="@drawable/ic_power" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="speaker"
        android:title="@string/speaker_category">

        <Preference
            android:key="clear_speaker_settings"
            android:title="@string/clear_speaker_title"
            android:icon="@drawable/ic_speaker_cleaner_icon" >
         <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.asus.zenparts.speaker.ClearSpeakerActivity"
                android:targetPackage="com.asus.zenparts.speaker" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="spectrum_profile"
        android:title="@string/spectrum_profile_title">

        <com.asus.zenparts.preferences.SecureSettingListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/spectrum_dialogTitle"
            android:entries="@array/spectrum_profiles"
            android:entryValues="@array/spectrum_values"
            android:key="spectrum"
            android:summary="@string/spectrum_summary"
            android:icon="@drawable/ic_spectrum"
            android:title="@string/spectrum_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="torch"
        android:title="@string/torch_title">

        <com.asus.zenparts.preferences.CustomSeekBarPreference
            android:key="torch_brightness"
            android:defaultValue="100"
            android:max="255"
            app:min="1"
            android:icon="@drawable/ic_torch"
            android:title="@string/torch_brightness_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="usb_fastcharge"
        android:title="@string/usb_fastcharge_title" >

    <com.asus.zenparts.preferences.SecureSettingSwitchPreference
            android:key="fastcharge"
            android:defaultValue="true"
            android:title="@string/fastcharge_title"
            android:icon="@drawable/ic_usb_fastcharge"
            android:summary="@string/fastcharge_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="vibration"
        android:title="@string/vibration_title">

        <com.asus.zenparts.preferences.VibratorStrengthPreference
            android:key="vib_strength"
            android:icon="@drawable/ic_vibrate"
            android:title="@string/vib_strength_title"
            android:summary="@string/vib_strength_summary_head" />

        <com.asus.zenparts.preferences.VibratorCallStrengthPreference
            android:key="vib_call_strength"
            android:title="@string/vib_call_strength_title_head"
            android:summary="@string/vib_call_strength_summary_head" />

        <com.asus.zenparts.preferences.VibratorNotifStrengthPreference
            android:key="vib_notif_strength"
            android:title="@string/vib_notif_strength_title_head"
            android:summary="@string/vib_notif_strength_summary_head" />

    </PreferenceCategory>

</PreferenceScreen>
